src/objects/UIControlAttribute__c.object
<CustomObject>
    <fields>
        <fullName>AttachmentId__c</fullName>
        <label>AttachmentId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataObjectType__c</fullName>
        <label>DataObjectType</label>
        <length>244</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImageBloob__c</fullName>
        <label>ImageBloob</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Images__c</fullName>
        <formula>IMAGE(Photo__c,&quot;Photo Unavaliable&quot;, 200,200)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Images</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDefault</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsHidden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsHidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Photo__c</fullName>
        <label>Photo</label>
        <type>Url</type>
    </fields>
	<fields>
        <fullName>OldId__c</fullName>
        <label>OldId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UIControlAttributeGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UIControlAttributeGroupId</label>
        <referenceTo>UIControlAttributeGroup__c</referenceTo>
        <relationshipLabel>UIControlAttributes</relationshipLabel>
        <relationshipName>UIControllerAttributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UIControlAttributeTypeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UIControlAttributeTypeId</label>
        <referenceTo>UIControlAttributeType__c</referenceTo>
        <relationshipLabel>UIControlAttributes</relationshipLabel>
        <relationshipName>UIControllerAttributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UIControlId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UIControlId</label>
        <referenceTo>UIControl__c</referenceTo>
        <relationshipName>UIControllerAttributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>244</length>
        <type>Text</type>
    </fields>
    <label>UIControlAttribute</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UIControlAttributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>